--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "application-name",
   "version": "0.0.1",
+  "engine": {
+    "node": "0.11.11"
+  },
   "private": true,
   "scripts": {
     "start": "node app.js"
